--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/morgan": "^1.9.9",
     "@types/sequelize": "^4.28.20",
+    "@types/winston": "^2.4.4",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -26,10 +28,12 @@
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.4",
     "sequelize-typescript": "^2.1.6",
+    "winston": "^3.15.0",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
