--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,24 @@
 # Database
 DB_NAME=
-DB_USER=
 DB_PASSWORD=
 DB_HOST=
 DB_PORT=
 
 
 # JWT
-JWT_SECRET_KEY=this_is_secret_key
-JWT_EXPIRES_IN=24d
+# JWT secret key
+JWT_SECRET=JWT_SECRETE_STRING
+# Number of minutes after which an access token expires
+JWT_ACCESS_EXPIRATION_MINUTES=180
+# Number of days after which a refresh token expires
+JWT_REFRESH_EXPIRATION_DAYS=30
+# Number of minutes after which a reset password token expires
+JWT_RESET_PASSWORD_EXPIRATION_MINUTES=10
+# Number of minutes after which a verify email token expires
+JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
 
-APP_PORT=4000
+
+
+
+
+APP_PORT=
