--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.4",
     "sequelize-typescript": "^2.1.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.15.0",
     "xss-clean": "^0.1.4"
   },
@@ -50,6 +52,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.9",
     "@types/otp-generator": "^4.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
     "nodemon": "^3.1.7",
     "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.2",
