--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "typeRoots": ["./src/types", "./node_modules/@types"],
+    "resolveJsonModule": true,
     "target": "ES6",
     "module": "commonjs",
     "strict": true,
