feat: - S3 integration completed - addMedia, addMultipleMedia, deleteMedia routes added

--- a/.env.example
+++ b/.env.example
@@ -6,19 +6,18 @@ DB_PORT=
 
 
 # JWT
-# JWT secret key
 JWT_SECRET=JWT_SECRETE_STRING
-# Number of minutes after which an access token expires
 JWT_ACCESS_EXPIRATION_MINUTES=180
-# Number of days after which a refresh token expires
 JWT_REFRESH_EXPIRATION_DAYS=30
-# Number of minutes after which a reset password token expires
 JWT_RESET_PASSWORD_EXPIRATION_MINUTES=10
-# Number of minutes after which a verify email token expires
 JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
+JWT_FORGOT_PASSWORD_EXPIRATION_MINUTES=5
 
-
-
+# S3 credentials
+ACCESS_KEY_ID=
+SECRET_ACCESS_KEY=
+REGION=
+BUCKET_NAME=
 
 
 APP_PORT=
