--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -2,7 +2,7 @@
   "apps": [
     {
       "name": "PostgreSQL App",
-      "script": "./start.sh",
+      "script": "./dist/index.js",
       "instances": 1,
       "exec_mode": "fork",
       "autorestart": true,
