--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
     "dev": "set NODE_ENV=development&& nodemon --exec ts-node src/index.ts",
     "migrate": "npx sequelize db:migrate",
     "migrate:undo": "npx sequelize-cli db:migrate:undo",
