--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
+  "lint-staged": {
+    "*.{ts,js}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -70,7 +76,7 @@
     "@typescript-eslint/parser": "^8.13.0",
     "eslint": "^9.14.0",
     "eslint-plugin-node": "^11.1.0",
-    "husky": "^9.1.6",
+    "husky": "^8.0.0",
     "lint-staged": "^15.2.10",
     "nodemon": "^3.1.7",
     "sequelize-cli": "^6.6.2",
