Nodemailer and EJS integration completed

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,14 @@ JWT_RESET_PASSWORD_EXPIRATION_MINUTES=10
 JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
 JWT_FORGOT_PASSWORD_EXPIRATION_MINUTES=5
 
+# SMTP
+SMTP_HOST=localhost
+SMTP_PORT=1025
+SMTP_USERNAME=dummy-user
+SMTP_PASSWORD=dummy-pass
+EMAIL_FROM=testing@resend.dev
+
+
 # S3 credentials
 ACCESS_KEY_ID=
 SECRET_ACCESS_KEY=
