--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
     "helmet": "^8.0.0",
@@ -47,6 +48,7 @@
     "morgan": "^1.10.0",
     "multer": "1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "nodemailer": "^6.9.16",
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -64,11 +66,13 @@
     "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/multer-s3": "^3.0.3",
     "@types/node": "^22.7.9",
+    "@types/nodemailer": "^6.4.17",
     "@types/otp-generator": "^4.0.2",
     "@types/sanitize-html": "^2.13.0",
     "@types/swagger-jsdoc": "^6.0.4",
