--- a/.env.example
+++ b/.env.example
@@ -16,10 +16,10 @@ JWT_FORGOT_PASSWORD_EXPIRATION_MINUTES=5
 # SMTP
 SMTP_HOST=localhost
 SMTP_PORT=1025
-SMTP_USERNAME=dummy-user
-SMTP_PASSWORD=dummy-pass
-EMAIL_FROM=testing@resend.dev
-
+SMTP_USERNAME=dummy  
+SMTP_PASSWORD=dummy  
+EMAIL_FROM=onboarding@resend.dev
+RESEND_API_KEY=re_123456789
 
 # S3 credentials
 ACCESS_KEY_ID=
