--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/index.js",
     "dev": "set NODE_ENV=development&& nodemon --exec ts-node src/index.ts",
     "build": "tsc",
+    "build:watch": "tsc --watch",
     "migrate": "npx sequelize db:migrate",
     "migrate:undo": "npx sequelize-cli db:migrate:undo",
     "migrate:undo:all": "npx sequelize-cli db:migrate:undo:all",
